--- a/Hexen.vcxproj
+++ b/Hexen.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="CreatedHooks\hkWndProc.cpp" />
     <ClCompile Include="CreatedThreads\ctDX.cpp" />
     <ClCompile Include="CreatedThreads\ctNative.cpp" />
+    <ClCompile Include="fiber_pool.cpp" />
     <ClCompile Include="fonts.hpp" />
     <ClCompile Include="Helpers.cpp" />
     <ClCompile Include="Invoker.cpp" />
@@ -182,12 +183,15 @@
     <ClCompile Include="Patterns.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Script.cpp" />
+    <ClCompile Include="script_mgr.cpp" />
+    <ClCompile Include="TimerManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClassPointers.hpp" />
     <ClInclude Include="CreatedHooks\hooktables.hpp" />
     <ClInclude Include="CreatedThreads\threadtable.hpp" />
     <ClInclude Include="Crossmap.hpp" />
+    <ClInclude Include="fiber_pool.hpp" />
     <ClInclude Include="GTA-Rage\ScrNative.hpp" />
     <ClInclude Include="GTA-Rage\Vector.hpp" />
     <ClInclude Include="Helpers.hpp" />
@@ -208,6 +212,8 @@
     <ClInclude Include="Renderer.hpp" />
     <ClInclude Include="return_spoof.hpp" />
     <ClInclude Include="Script.hpp" />
+    <ClInclude Include="script_mgr.hpp" />
+    <ClInclude Include="TimerManager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="return_spoof.asm">
